--- a/.expeditor/template.mustache
+++ b/.expeditor/template.mustache
@@ -1,3 +1,3 @@
-{{description}}
+This is a description from a mustache template! 
 
-This is a description from a mustache template!
+{{name}} - {{description}}
